--- a/index.html
+++ b/index.html
@@ -13,10 +13,44 @@
 
 <body>
     <div class="container">
+        <div class ="weather-app">
         <h1>
-            Hello!
+        New York
         </h1>
-        <a class="btn btn-primary" href="#" role="button">Link</a>
+        <ul>
+            <li>
+                Friday 05:00
+            </li>
+            <li>
+                clear
+            </li>
+        </ul>
+        <div class = "row">
+            <div class="col-6">
+              <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"  alt="clear"/>
+              12°C | °F
+            </div>
+            <div class ="col-6">
+                <ul>
+                    <li>
+                        Precipitation: 0%
+                    </li>
+                    <li>
+                        Humidity: 73%
+                    </li>
+                    <li>
+                        Wind: 2 km/h
+                    </li>
+                </ul>
+            </div>
+        </div>
+        </div>
+        <small>
+        <a href="https://github.com/annats04/vanila-weather-app"
+        target="_blank"> Open-source code
+        </a>
+        by Anna Tsantekidou
+        </small>
     </div>
     <script src="src/app.js"></script>
 </body>
