--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
     <div class="container">
         <div class = "weather-app-wrapper">
             <div class ="weather-app">
+                <form id = "search-form" class = "mb-3">
+                    <div class="row">
+                        <div class="col-md-9">
+                  <input type= "search" 
+                  placeholder= "Search city" 
+                  class = "form-control"
+                  id ="city-input" 
+                  autocomplete="off"/>
+                    </div>
+                    <div class = "col-3">
+                  <input type="submit" value="search" class = "btn btn-primary w-100"/>
+                  </div>
+                    </div>
+                </form>
                 <div class = "overview">
         <h1 id="city">
    
@@ -34,9 +48,10 @@
         <div class = "row">
          <div class="col-6">
                 <div class="clearfix weather-temperature">      
-                 <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"  
+                 <img   src=""
                     alt="Clear"
                     class="float-left" 
+                    id ="icon"
                     />
                     <div class= "float-left">
                      <strong id="temperature"></strong>
