--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     />
                     <div class= "float-left">
                      <strong id="temperature"></strong>
-                     <span class="units"> °C | °F </span>
+                     <span class="units"> <a href="#" id ="celsius-link"> °C </a>| <a href="#" id ="far">°F</a> </span>
                     </div>
                 </div>
                 
